--- a/style.css
+++ b/style.css
@@ -4,19 +4,19 @@
     box-sizing: border-box;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-html{
-    background-color: rgb(219, 219, 219);
-}
 body{
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
+    padding: 30px 30px 20px 30px;
+    background-color: #111;
 }
 .container{
     display: flex;
-    justify-content: center;    
+    justify-content: center;
+    align-items: center;   
+    flex-direction: column;
 }
-
 
 /* dont wanna mess with these */
 .container .coin-price{
@@ -25,8 +25,11 @@ body{
     align-items: center;
     padding: -10px 20px;
     border-radius: 5px;
-    box-shadow: 0 0 3px rgb(1, 1, 1);
-    margin: 7px;
+    padding: 10px;
+    width: 400px;
+    margin-bottom: 10px;
+    color: #eee;
+    background-color: #333;
 }
 
 .container .coin-price .logo{
